--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+
+:root {
+	--primary-color: #3a4052;
+}
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	font-family: 'Open Sans', sans-serif;
+	line-height: 1.5;
 }
 
 .app {
@@ -10,6 +22,51 @@
   justify-content: space-evenly;
   align-items: center;
 }
+
+header {
+  color: white;
+  margin-left: 2rem;
+}
+
+header h1 {
+  font-size: 3rem;
+}
+
+header p {
+  font-size: 1.5rem;
+}
+
+.vid-container {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden; 
+  z-index: -1000;
+}
+
+.video-container video {
+	min-width: 100%;
+	min-height: 100%;
+  position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	object-fit: cover;
+}
+
+.video-container:after {
+	content: '';
+	z-index: 1;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.5);
+	position: absolute;
+}
+
 .time-select,
 .sound-picker,
 .player-container {
@@ -90,10 +147,158 @@
   font-size: 5rem;
 }
 
-video {
-  position: fixed;
-  top: 0%;
-  left: 0%;
-  width: 100%;
-  z-index: -10;
+
+
+@media only screen and (max-width: 1200px) {
+  .app {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+.time-select button,
+.sound-picker button {
+  color: black;
+  width: 75%;
+  height: 30%;
+  background: white;
+  opacity: 0.7;
+  border: solid 2px black;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 1rem;
+  transform: all 0.5s ease;
 }
+
+.sound-picker button {
+  border: solid 2px black;
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.time-display {
+  font-size: 2rem;
+}
+
+.player-container svg {
+  display: none;
+}
+
+.play {
+  width: 3rem;
+  height: 3rem;
+}
+} 
+
+@media only screen and (max-width: 800px) {
+  .app {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+  }
+  
+  header h1 {
+    font-size: 2rem;
+  }
+  
+  header p {
+    font-size: 1rem;
+  }
+  
+  .time-select button,
+  .sound-picker button {
+    color: black;
+    width: 75%;
+    height: 30%;
+    background: white;
+    opacity: 0.7;
+    border: solid 2px black;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 1rem;
+    transform: all 0.5s ease;
+  }
+  
+  .sound-picker button {
+    border: solid 2px black;
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    padding: 1rem;
+    cursor: pointer;
+  }
+  
+  .time-display {
+    font-size: 2rem;
+  }
+  
+  .player-container svg {
+    display: none;
+  }
+  
+  .play {
+    width: 3rem;
+    height: 3rem;
+  }
+  }
+
+@media only screen and (max-width: 600px) {
+  .app {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  header h1 {
+    font-size: 2rem;
+  }
+  
+  header p {
+    font-size: 1rem;
+  }
+  
+  .time-select button,
+  .sound-picker button {
+    color: black;
+    width: 75%;
+    height: 30%;
+    background: white;
+    opacity: 0.7;
+    border: solid 2px black;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 1rem;
+    transform: all 0.5s ease;
+  }
+  
+  .sound-picker button {
+    border: solid 2px black;
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    padding: 1rem;
+    cursor: pointer;
+  }
+  
+  .time-display {
+    font-size: 2rem;
+  }
+  
+  .player-container svg {
+    display: none;
+  }
+  
+  .play {
+    width: 3rem;
+    height: 3rem;
+  }
+  }
