--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header p {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: auto;
 	overflow: hidden; 
   z-index: -1000;
 }
@@ -201,7 +201,7 @@ header p {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
   }
   
   header h1 {
